Añadida alerta al buscador cuando no hay match en la busqueda

--- a/src/app/app/components/about/about.component.html
+++ b/src/app/app/components/about/about.component.html
@@ -2,5 +2,5 @@
 <hr>
 
 <p class="animated fadeIn">
-    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae reiciendis consequatur, officia, odio porro eos quae ut provident ab quidem sunt, distinctio exercitationem? Veniam doloribus consectetur, voluptas sit autem vero.
+    Es una web-app donde podrás encontrar información sobre los heroes que componen DC y Marvel.
 </p>
