--- a/src/app/app/components/heroes/heroes.component.html
+++ b/src/app/app/components/heroes/heroes.component.html
@@ -3,7 +3,7 @@
 
 <div class="card-columns">
 
-    <app-heroe-detalles [heroe]="heroe" [index]="i" *ngFor="let heroe of heroes; let i=index" ></app-heroe-detalles>
+    <app-heroe-detalles (heroefinded)="verHeroe($event)" [heroe]="heroe" [index]="i" *ngFor="let heroe of heroes; let i=index" ></app-heroe-detalles>
     <!-- *ngFor="let heroe of heroes; let i=index" -->
     
 </div>
