--- a/src/app/app/components/buscador/buscador.component.html
+++ b/src/app/app/components/buscador/buscador.component.html
@@ -11,5 +11,5 @@
 
 
 <div class="card-columns">
-    <app-heroe-detalles  [heroe]="heroe" [index]="i" *ngFor="let heroe of heroes; let i=index" ></app-heroe-detalles>
+    <app-heroe-detalles [heroe]="heroe" [index]="heroe.idx" *ngFor="let heroe of heroes" ></app-heroe-detalles>
 </div>
