boton volver creado y funcionando

--- a/src/app/app/components/buscador/buscador.component.html
+++ b/src/app/app/components/buscador/buscador.component.html
@@ -1,4 +1,5 @@
 <!-- <h1 class="animated fadeIn fast"><small class="animated fadeIn">{{name | uppercase}}</small></h1> -->
+<button class="btn btn-link" (click)="volver()">Volver</button>
 <hr>
 
   <div class="row animated fadeIn fast" *ngIf="heroes.length == 0">
