--- a/src/app/app/components/shared/navbar/navbar.component.html
+++ b/src/app/app/components/shared/navbar/navbar.component.html
@@ -2,11 +2,8 @@
     <a class="navbar-brand" href="#">
         <img src="/assets/img/A-64.png" width="30" height="30" alt="">
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
 
             <li class="nav-item" routerLinkActive="active">
@@ -21,7 +18,9 @@
         </ul>
         <div class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="text" placeholder="Buscar héroe" (keyup.enter)="buscarHeroe(buscarTexto.value)" #buscarTexto>
-            <button class="btn btn-outline-primary my-2 my-sm-0" type="button">Buscar</button>
+            <button class="btnnavbar" type="button"><i class="material-icons">search</i></button>
         </div>
     </div>
 </nav>
+
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
