--- a/src/app/app/components/shared/navbar/navbar.component.html
+++ b/src/app/app/components/shared/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">
-        <img src="/assets/img/A-64.png" width="30" height="30" alt="">
+        <img src="assets/img/A-64.png" width="30" height="30" alt="">
     </a>
 
     <div class="navbar-collapse" id="navbarSupportedContent">
